Revert "Ignore .cache folder in tests"
This reverts commit bda3e903e2c3f52733a435c8514f11abfa1cbd6e.

--- a/package.json
+++ b/package.json
@@ -50,10 +50,6 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupTestFrameworkScriptFile": "<rootDir>/src/jest.ts",
-    "testPathIgnorePatterns": [
-      "<rootDir>/.cache/",
-      "<rootDir>/node_modules/"
-    ]
+    "setupTestFrameworkScriptFile": "<rootDir>/src/jest.ts"
   }
 }
