Fix production build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@orbit/coordinator": ["../node_modules/@orbit/coordinator/dist/commonjs/es5"],
       "@orbit/core": ["../node_modules/@orbit/core/dist/commonjs/es5"],
       "@orbit/data": ["../node_modules/@orbit/data/dist/commonjs/es5"],
+      "@orbit/indexeddb": ["../node_modules/@orbit/indexeddb/dist/commonjs/es5"],
       "@orbit/store": ["../node_modules/@orbit/store/dist/commonjs/es5"],
       "@orbit/utils": ["../node_modules/@orbit/utils/dist/commonjs/es5"]
     }
