--- a/app.json
+++ b/app.json
@@ -8,7 +8,10 @@
       "buildpacks":[
         { "url": "heroku/nodejs" },
         { "url": "https://github.com/heroku/heroku-buildpack-google-chrome" }
-      ]
+      ],
+      "scripts": {
+        "test": "yarn test -- --single-run"
+      }
     }
   }
 }
