--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": true,
