--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@orbit/jsonapi": "^0.15.0",
     "@orbit/store": "^0.15.0",
     "@orbit/utils": "^0.15.0",
+    "appcache-nanny": "^1.1.0",
+    "appcache-webpack-plugin": "^1.3.0",
     "core-js": "^2.4.1",
     "material-design-icons-iconfont": "^3.0.3",
     "rxjs": "^5.1.0",
